Quick styling fix for wrapping text

--- a/src/sass/layouts/_home.scss
+++ b/src/sass/layouts/_home.scss
@@ -48,6 +48,7 @@
     align-self: flex-start;
     grid-row: 11 / span 1;
     margin-top: 1rem;
+    text-align: right;
   }
 
   &--rect {
